# RoboCup-Home_tutorials_homework

./: DockerUsageReadme.txt
Chenghao_Wang_roboCupHome_tutorial3/task_2/tiago_task/: CMakeLists.txt  package.xml
Chenghao_Wang_roboCupHome_tutorial3/task_3/: readMe.txt
Chenghao_Wang_roboCupHome_tutorial3/task_3/tiago_task/: CMakeLists.txt  package.xml
Chensheng_Chen_roboCupHome_tutorial1/workspace/devel/: .catkin  .rosinstall  setup.sh
Chensheng_Chen_roboCupHome_tutorial2/: Question  guide of the operating for my homework
Chensheng_Chen_roboCupHome_tutorial2/workspace/T2_E2/: TIAGo.rviz
Chensheng_Chen_roboCupHome_tutorial3/simple_moveit_goals/: CMakeLists.txt  package.xml
Chensheng_Chen_roboCupHome_tutorial3/simple_moveit_goals/src/: simple_moveit_goals.cpp
Chensheng_Chen_roboCupHome_tutorial4/: README.txt
Chensheng_Chen_roboCupHome_tutorial4/src/object_detection/: CMakeLists.txt
Chensheng_Chen_roboCupHome_tutorial4/src/object_detection/src/: object_recognition.cpp
Electorical material/ROS机器人程序设计/1448OS_Code/: Readme.txt.TXT
Homework1/: readText
Homework2/Template/: README.txt  README.txt~  door.sdf~  model.config~  tiago_public.rosinstall
Homework2/Template/controllers_tutorials/: CMakeLists.txt  CMakeLists.txt~  (+2 more)
Homework4/calibration_kinect2/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
Homework5/: robocup_object_test.world
Skin/: main_load_and_view_patch_tut.cpp
Skin/tum_ics_skin_tutorials/: .gitignore  CMakeLists.txt  How2UseSkinDriver.txt
Thesis_templates/.AppleDouble/: .Parent
Thesis_templates/Thesis/: WissenschaftlicheArbeit.aux  WissenschaftlicheArbeit.lot  WissenschaftlicheArbeit.out  WissenschaftlicheArbeit.tex  WissenschaftlicheArbeit.toc  WissenschaftlicheArbeit.xdy
(+196 files in other folders)
